<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/app_toolbar"
            android:id="@+id/appToolbar" />

        <ImageView
            android:id="@+id/icClock"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/icHearth"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_timer"
            app:layout_constraintTop_toBottomOf="@+id/appToolbar"
            android:contentDescription="@string/clock_icon"/>

        <ImageView
            android:id="@+id/icHearth"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/icClock"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/icClock"
            android:contentDescription="@string/hearth_icon" />

        <TextView
            android:id="@+id/txtMinutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/_15_minutes"
            app:layout_constraintTop_toBottomOf="@+id/icClock"
            app:layout_constraintRight_toLeftOf="@+id/txtLikes"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/txtLikes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/_54214"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/txtMinutes"
            app:layout_constraintLeft_toRightOf="@id/txtMinutes"
            app:layout_constraintRight_toRightOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMinutes"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/primary" />

        <TextView
            android:id="@+id/txtRevenue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:lineHeight="25dp"
            android:text="@string/cooffe_revenue"
            android:gravity="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txtIngredients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingredients"
            android:paddingHorizontal="20dp"
            android:gravity="start"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/txtRevenue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/icArrowRight1"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/hearth_icon"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toStartOf="@+id/txtIngredients1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtIngredients" />

        <TextView
            android:id="@+id/txtIngredients1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="@string/_1_shot_of_espresso"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icArrowRight1"
            app:layout_constraintTop_toTopOf="@+id/icArrowRight1" />

        <ImageView
            android:id="@+id/icArrowRight2"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/hearth_icon"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toStartOf="@+id/txtIngredients1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icArrowRight1" />

        <TextView
            android:id="@+id/txtIngredients2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="@string/_100ml_milk"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icArrowRight2"
            app:layout_constraintTop_toTopOf="@+id/icArrowRight2" />

        <ImageView
            android:id="@+id/icArrowRight3"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/hearth_icon"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintEnd_toStartOf="@+id/txtIngredients1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icArrowRight2" />

        <TextView
            android:id="@+id/txtIngredients3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textStyle="bold"
            android:text="@string/_1_spoon_of_chocolate_powder"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icArrowRight3"
            app:layout_constraintTop_toTopOf="@+id/icArrowRight3"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>